--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       &#9776;
     </button>
     <div class="collapse navbar-toggleable-xs" id="topNav">
-      <a class="navbar-brand" href="index.html">Springhouse</a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" href="about.html">About</a>
@@ -45,16 +45,19 @@
 
   <div class="container-fluid" id="about">
     <div class="row">
-      <div class="col-sm-6 fixed-padding">
+      <div class="col-sm-6">
         <div class="row">
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
           <div class="col-sm-6 ourStory">
             <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations
               and development.
-              <br><br>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout New York City and South Florida.<br><br>As a value investor, Springhouse targets assets that we consider to be undervalued, inefficiently managed and
-              physically or financially distressed. Throughout our history, we have demonstrated a keen ability to create value by recognizing opportunities early, formulating the appropriate business plan and then applying the right operational savvy
-              to execute our vision.</p>
+              <br>
+              <br>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets
+              throughout New York City and South Florida.
+              <br>
+              <br>As a value investor, Springhouse targets assets that we consider to be undervalued, inefficiently managed and physically or financially distressed. Throughout our history, we have demonstrated a keen ability to create value by recognizing
+              opportunities early, formulating the appropriate business plan and then applying the right operational savvy to execute our vision.</p>
           </div>
           <div class="col-sm-6 remove-right">
             <p>Our flexibility and nimbleness at all stages of the investment and development process is an advantage in any economic cycle. We are a hands on manager with capabilities in investment, finance, design, construction and property management.</p>
@@ -67,66 +70,61 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 arrows-img-6 fixed-padding">
+      <div class="col-sm-6 arrows-img-6">
         <p class="subtitle invisible-subtitle">Our Story</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
         <img class="media-fw" src="img/About.jpg">
       </div>
     </div>
-    <div class="row">
+    <div class="row r15">
       <p class="subtitle">Adam Verner</p>
       <hr class="subtitle-hr">
       <div class="col-xs-12">
-        <div class="col-sm-6">
+        <div class="col-sm-3">
           <img class="media-fw portrait" src="img/portrait.png">
-          <p class="pull-30">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess of
-            $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.
-            <br>
-            <br>Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000
-            unit mixed-use development.</p>
         </div>
-        <div class="col-sm-6">
-          <p>Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection of mixed-use assets spread throughout New York City.
-            <br>
-            <br>Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized in opportunistic investments
-            across all property types. Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place in Manhattan and the initial zoning &amp; land use phase
-            for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
+        <div class="col-sm-9">
+          <p class="text-3">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Adam has successfully closed in excess of
+            $400 million of real estate assets across the mixed-use, multifamily and hotel sectors. Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York Metro
+            area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection of mixed-use
+            assets spread throughout New York City. Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized
+            in opportunistic investments across all property types. Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place in Manhattan and the initial
+            zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
         </div>
       </div>
     </div>
-  </div>
 
-  <footer class="footer">
-    <div class="container-fluid">
-      <div class="row">
-        <hr class="footer-hr">
-        <div class="col-xs-6 col-sm-8">
-          <p class="text-xs-left">Springhouse Partners</p>
-        </div>
-        <div class="col-xs-6 col-sm-4">
-          <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
+    <footer class="footer about-footer">
+      <div class="container-fluid">
+        <div class="row">
+          <hr class="footer-hr">
+          <div class="col-xs-6 col-sm-8">
+            <p class="text-xs-left">Springhouse Partners</p>
+          </div>
+          <div class="col-xs-6 col-sm-4">
+            <p class="text-xs-right">320 Fifth Avenue, New York, NY 10001</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-  <script>
-    $("#selectProjects").hover(
-      function() {
-        $("#selectProjectsList").css('display', 'block');
-      },
-      function() {
-        setTimeout(
-          function() {
-            $("#selectProjectsList").css('display', 'none');
-          }, 1000);
-      }
-    );
-  </script>
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+    <script>
+      $("#selectProjects").hover(
+        function() {
+          $("#selectProjectsList").css('display', 'block');
+        },
+        function() {
+          setTimeout(
+            function() {
+              $("#selectProjectsList").css('display', 'none');
+            }, 1000);
+        }
+      );
+    </script>
 </body>
 
 </html>
