--- a/irvingplace.html
+++ b/irvingplace.html
@@ -18,7 +18,7 @@
       &#9776;
     </button>
     <div class="collapse navbar-toggleable-xs" id="topNav">
-      <a class="navbar-brand" href="index.html">Springhouse</a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
