--- a/selectprojects.html
+++ b/selectprojects.html
@@ -45,14 +45,14 @@
 
   <div class="container-fluid" id="cases">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <a href="irvingplace.html">
           <div class="case C1">
             <p>Irving Place</p>
           </div>
         </a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <a href="columbiauniversity.html">
           <div class="case C2">
             <p>Columbia University</p>
@@ -61,14 +61,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <a href="miamibeach.html">
           <div class="case C3">
             <p>Miami Beach</p>
           </div>
         </a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <a href="williamsburg.html">
           <div class="case C4">
             <p>Williamsburg</p>
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <a href="bedstuy.html">
           <div class="case C5">
             <p>Bed-Stuy</p>
