--- a/bedstuy.html
+++ b/bedstuy.html
@@ -73,7 +73,20 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/BedStuy/A-min.jpg" alt="BedStuy">
+            <div id="bedstuy-carousel" class="carousel slide home-carousel-img" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              </ol>
+              <div class="carousel-inner home-carousel-img" role="listbox">
+                <div class="carousel-item active" id="firstSlide">
+                  <img src="img/BedStuy/A-min.jpg" alt="">
+                </div>
+                <div class="carousel-item" id="secondSlide">
+                  <img src="img/BedStuy/B-min.jpg" alt="">
+                </div>
+              </div>
+            </div>
             <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture</p>
           </div>
         </div>
@@ -117,6 +130,11 @@
           }, 1000);
       }
     );
+  </script>
+  <script>
+  $('#bedstuy-carousel').click(function() {
+    $('#bedstuy-carousel').carousel('next');
+  });
   </script>
 </body>
 
