--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -30,7 +30,7 @@
             <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
             <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
-            <a class="dropdown-item" href="bedstuy.html">Bed-Stuy</a>
+            <a class="dropdown-item" href="columbia.html">Bed-Stuy</a>
           </div>
         </li>
         <li class="nav-item">
@@ -72,7 +72,20 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Columbia/A-min.jpg" alt="Columbia">
+            <div id="columbia-carousel" class="carousel slide home-carousel-img" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              </ol>
+              <div class="carousel-inner home-carousel-img" role="listbox">
+                <div class="carousel-item active" id="firstSlide">
+                  <img src="img/Columbia/A-min.jpg" alt="">
+                </div>
+                <div class="carousel-item" id="secondSlide">
+                  <img src="img/Columbia/B-min.jpg" alt="">
+                </div>
+              </div>
+            </div>
             <p>Historic brownstones with period details deliver classic New York charm to tenants</p>
           </div>
         </div>
@@ -116,6 +129,11 @@
           }, 1000);
       }
     );
+  </script>
+  <script>
+  $('#columbia-carousel').click(function() {
+    $('#columbia-carousel').carousel('next');
+  });
   </script>
 </body>
 
