--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -23,15 +23,14 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
-        <li class="nav-item" id="selectProjects">
-          <a class="nav-link active" href="selectprojects.html">Select Projects</a>
-          <div class="dropdown-menu" id="selectProjectsList">
-            <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
-            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
-            <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
-            <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
-            <a class="dropdown-item" href="columbia.html">Bed-Stuy</a>
-          </div>
+        <li class="nav-item" id="ddown-open"><a class="nav-link active" href="selectprojects.html">Select Projects</a>
+          <ul id="ddown">
+            <li><a href="irvingplace.html">Irving Place</a></li>
+            <li><a href="columbiauniversity.html">Columbia University</a></li>
+            <li><a href="miamibeach.html">Miami Beach</a></li>
+            <li><a href="williamsburg.html">Williamsburg</a></li>
+            <li class="last-ddown"><a href="bedstuy.html">Bed-Stuy</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="press.html">Press</a>
