--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
-        <li class="nav-item" id="selectProjects">
-          <a class="nav-link" href="selectprojects.html">Select Projects</a>
-          <div class="dropdown-menu" id="selectProjectsList">
-            <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
-            <a class="dropdown-item" href="columbiauniversity.html">Columbia University</a>
-            <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
-            <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
-            <a class="dropdown-item" href="bedstuy.html">Bed-Stuy</a>
-          </div>
+        <li class="nav-item" id="ddown-open"><a class="nav-link" href="selectprojects.html">Select Projects</a>
+          <ul id="ddown">
+            <li><a href="irvingplace.html">Irving Place</a></li>
+            <li><a href="columbiauniversity.html">Columbia University</a></li>
+            <li><a href="miamibeach.html">Miami Beach</a></li>
+            <li><a href="williamsburg.html">Williamsburg</a></li>
+            <li class="last-ddown"><a href="bedstuy.html">Bed-Stuy</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="press.html">Press</a>
@@ -66,12 +65,13 @@
       <div class="col-sm-6">
         <hr class="subtitle-hr">
         <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
-          development.</p>
+          development.
+        </p>
       </div>
       <div class="col-sm-6">
         <hr class="subtitle-hr">
-        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel
-        assets throughout New York City and South Florida.</p>
+        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout
+          New York City and South Florida.</p>
       </div>
       <!--<div class="col-sm-3">
         <p class="text-xs-left text-uppercase subtitle">Address</p>
@@ -140,9 +140,9 @@
     );
   </script>
   <script>
-  $('#home-carousel').click(function() {
-    $('#home-carousel').carousel('next');
-  });
+    $('#home-carousel').click(function() {
+      $('#home-carousel').carousel('next');
+    });
   </script>
 </body>
 
