--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
         <a href="tel:+12125966960">
           <p>T: 212 596 6960</p>
         </a>
-        <p>Maintenance and leasing inquiries:</p>
+        <p class="email-label">Maintenance and leasing inquiries:</p>
         <a href="mailto:maintenance@springhousepartners.com">
-          <p>maintenance@springhousepartners.com</p>
+          <p><u>maintenance@springhousepartners.com</u></p>
         </a>
-        <p>General business inquiries:</p>
+        <p class="email-label">General business inquiries:</p>
         <a href="mailto:info@springhousepartners.com">
-          <p>info@springhousepartners.com</p>
+          <p><u>info@springhousepartners.com</u></p>
         </a>
       </div>
       <div class="col-sm-9">
