--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 arrows-img-6">
+      <div class="col-sm-6">
         <p class="subtitle invisible-subtitle">Our Story</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
         <img class="media-fw" src="img/About.jpg">
