--- a/press.html
+++ b/press.html
@@ -52,7 +52,9 @@
         <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property.
           <br>The six-story, 50,000-square-foot building at 51 Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property also has a roughly 10,000-square-foot commercial component holding five
           retail tenants and one oﬃce unit.</p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/TheWallStreetJournal.png">
@@ -62,7 +64,9 @@
         <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early.
           <br>Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was Treetop Development, a New Jersey investment
           company that bought them for $8.8 million in 2012.</p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/CommercialObserverLogo.png">
@@ -73,7 +77,9 @@
           <br>The 65,000-square-foot building is located in the Clinton Hill neighborhood of Brooklyn, just a few blocks from the Pratt Institute.
           <br>“This area has seen signifcant positive changes over the past few years and we expect it to continue to gentrify,” said Adam Verner, president of Springhouse Partners, noting that $280 per square foot was a relative bargain compared to similar
           properties in the neighborhood.</p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/RealEstateWeeklyLogo.png">
@@ -84,7 +90,9 @@
           <br>In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them.
           <br>“Because I’m young, I tend to be a little bit more selective with the properties we invest in,” said 32-year-old Adam Verner, who founded Springhouse Partners in 2010. “It’s very important to me to make prudent investment decisions to be sure
           that these frst few deals are successful.”</p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
     </div>
     <div class="row">
@@ -96,7 +104,9 @@
         <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000.
           <br>Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer, a private investor. “With newly renovated units delivered upon closing the buyer was
           able to capitalize on the scale of the property with an immediate increase in cash fow,” said Scot Hirschfeld, Vice President at Ariel Property Advisors.</p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/CurbedMiamiLogo.png">
@@ -104,25 +114,31 @@
         <h1 class="text-xs-center quote-sm">Historic Mayflower Hotel on Alton Road to Become an, um, 'Boutique Hospitality Concept'</h1>
         <hr>
         <p>The historic Mediterranean Revival building on Alton Road and 17th Street with the Vespa dealership on the corner, which was originally known as the Mayflower Hotel and is now called the Variety Building and has been a studio apartment building since the '90s, is being "lightly renovated" and converted "back to its roots," into a "boutique hospitality concept." Two developers...</p>
-        <a href=""><p><u>Read more ></u></p></a>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/RealEstateWeeklyMiamiLogo.png">
         <hr>
-        <h1 class="text-xs-center quote-sm">Springhouse acquires prime mixed use asset in the heart of Miami Beach for $21,000,000</h1>
+        <h1 class="text-xs-center quote-sm">Historic designation for iconic South Beach building moves forward</h1>
         <hr>
-        <p>A prime piece of Alton Road real estate sold for $21 million to a partnership of New York investors, according to Miami-Dade County records.
-          <br>The five-story mixed-use property at 1700 Alton Road in Miami Beach includes retail, apartments and parking, according to a listing, and was built in 1923.
-          <br>AC 1700 Alton Owner, an LLC with the same address as New York-based Springhouse Partners, was the listed </p>
-          <a href=""><p><u>Read more ></u></p></a>
+        <p>The area surrounding West Avenue, 17th Street and Alton Road on South Beach is quickly becoming a “go-to” destination for boutique hotels catering to the thousands of visitors who flock to Lincoln Road. A 116-room Residence Inn recently opened
+          on 17th Street at the northern end of West Avenue and a restored five-story building built in 1922 that was once the second tallest high-rise...</p>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
       <div class="col-sm-3">
         <img class="press-logo" src="img/SouthFloridaBusinessJournalLogo.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Miami Beach apartment/retail building sold for $21M to New York investor</h1>
         <hr>
-        <p>Goldwater Realty, a Miami Beach-based company managed by Zalman Fellig, sold the building at 1700 Alton Road to AC 1700 Alton Owner, which is managed by Springhouse Partners founder Adam Verner. Forte Capital Management was also part of the deal. The buyer obtained a $19.04 million mortgage from Ladder Capital Finance...</p>
-        <a href=""><p><u>Read more ></u></p></a>
+        <p>Goldwater Realty, a Miami Beach-based company managed by Zalman Fellig, sold the building at 1700 Alton Road to AC 1700 Alton Owner, which is managed by Springhouse Partners founder Adam Verner. Forte Capital Management was also part of the deal.
+          The buyer obtained a $19.04 million mortgage from Ladder Capital Finance...</p>
+        <a href="">
+          <p><u>Read more ></u></p>
+        </a>
       </div>
     </div>
   </div>
