--- a/irvingplace.html
+++ b/irvingplace.html
@@ -48,9 +48,7 @@
         <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
-        <p class="case-textblock">Successful investments begin by identifying potential value where others do not. The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property,
-          resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a
-          prestige location.</p>
+        <p class="case-textblock">Many successful investments begin by identifying potential value where others do not. The property at the corner of Irving Place and 17th Street is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in significantly below market rents and an opportunity to substantially reposition the asset to be more in line with its local surroundings.</p>
         <hr>
         <p>6-story elevator building</p>
         <hr>
