--- a/about.html
+++ b/about.html
@@ -55,17 +55,16 @@
               <br>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets
               throughout New York City and South Florida.
               <br>
-              <br>As a value investor, Springhouse targets assets that we consider to be undervalued, inefficiently managed and physically or financially distressed. Throughout our history, we have demonstrated a keen ability to create value by recognizing
-              opportunities early, formulating the appropriate business plan and then applying the right operational savvy to execute our vision.</p>
+              <br>We create value by recognizing opportunities early, formulating the appropriate business plan and then applying the right operational savvy to execute our vision.</p>
           </div>
           <div class="col-sm-6 remove-right">
-            <p>Our flexibility and nimbleness at all stages of the investment and development process is an advantage in any economic cycle. We are a hands on manager with capabilities in investment, finance, design, construction and property management.</p>
+            <p>Our flexibility and nimbleness at all stages of the investment and development process is an advantage in any economic cycle.  We are a hands on manager with capabilities in investment, finance, construction, property management and design.</p>
             <hr>
             <p class="quote text-xs-center">Entrepreneurial Spirit
-              <br>&amp;
+              <br>+
               <br>Institutional Execution</p>
             <hr>
-            <p>We target relationship driven situations with strong long term growth potential. Our goal is to create significant value for each project and neighborhood we work within.</p>
+            <p>We target relationship driven situations with strong long term growth potential.  Our goal is to create significant value for each project and neighborhood we work in.</p>
           </div>
         </div>
       </div>
