--- a/bedstuy.html
+++ b/bedstuy.html
@@ -52,7 +52,7 @@
         <hr>
         <p>64,000 square feet</p>
         <hr>
-        <p>43 furnished and unfurnished apartments</p>
+        <p>44 furnished and unfurnished apartments</p>
         <hr>
         <p>9-story elevator building</p>
         <hr>
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p class="extra-lower">With convenient access to Pratt, Parsons, The New School, and New York University, this 9 story, 64,000 square feet building presents a tremendous opportunity for singles, recent grads, and young families.</p>
+            <p class="extra-lower">With convenient access to Pratt, Parsons, The New School, and New York University, this 9 story, 65,000 square feet building presents a tremendous opportunity for singles, recent grads, and young families.</p>
           </div>
         </div>
         <div class="row">
@@ -76,7 +76,7 @@
       </div>
       <div class="col-sm-3">
         <img src="img/Bed-Stuy-Render.png">
-        <p class="case-textblock">Constructed in 2004, the asset features 43 unit, many with balconies and terraces</p>
+        <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces</p>
         <img class="img-circle" src="img/BedStuy/circle-min.jpg">
         <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers, and young professionals.</p>
       </div>
