--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -48,9 +48,7 @@
         <p>Columbia University</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
-        <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized, driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem. Springhouse recognized this opportunity and invested in these two
-          62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood. Moreover, their proximity to Columbia University and multiple subway lines add to the significant
-          upside potential.</p>
+        <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized, driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem. Springhouse recognized this opportunity and acquired these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood. Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
         <hr>
         <p>52 apartments, 7 retail stores</p>
         <hr>
