--- a/irvingplace.html
+++ b/irvingplace.html
@@ -50,15 +50,15 @@
         <hr>
         <p class="case-textblock">Many successful investments begin by identifying potential value where others do not. The property at the corner of Irving Place and 17th Street is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in significantly below market rents and an opportunity to substantially reposition the asset to be more in line with its local surroundings.</p>
         <hr>
-        <p>6-story elevator building</p>
+        <p>6 story elevator building</p>
         <hr>
-        <p>46,500 square feet</p>
+        <p>50,000 square feet</p>
         <hr>
         <p>56 apartments</p>
         <hr>
-        <p>5 retail spaces totalling 8,300 square feet</p>
+        <p>10,000 square feet of commercial space</p>
         <hr>
-        <p>Office space</p>
+        <p>1 high end cocktail lounge, 1 cozy wine bar, 2 restaurants and a stand-alone carriage house</p>
         <hr>
         <div class="sp-maps ip-map">
           <img class="img-circle roundmap" src="img/Map_IrvingPlace.jpg">
@@ -68,13 +68,13 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/facade-min.jpg">
-            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels, and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods.</p>
+            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels, and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/A-min.jpg" alt="">
-            <p>An upscale mixology bar (“Dear Irving”) occupies 2,400 sf at the property and includes the lavish private room pictured above, drawing a sophisticated and celebrity clientele.</p>
+            <p>An upscale mixology bar (“Dear Irving”) occupies 2,500 sf at the property and includes the lavish private back room pictured above, drawing a sophisticated and celebrity clientele.</p>
           </div>
         </div>
       </div>
