--- a/miamibeach.html
+++ b/miamibeach.html
@@ -48,16 +48,11 @@
         <p>Miami Beach</p>
         <h1>Hospitality Innovation</h1>
         <hr>
-        <p class="case-textblock">As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity
-          to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.
-          <br>Set to launch in 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated
-          lobby and communal spaces, and vibrant food and beverage programs.</p>
+        <p class="case-textblock">As the hospitality landscape has evolved over the past decade, the market has shifted from standardized, “one-size-fits-all” accomodations to more creative, boutique, locally-inspired offerings. Recognizing this trend, Springhouse saw an opportunity to develop a new hospitality offering at 1700 Alton Road in Miami Beach - an area that attracts a great number of young people but offers only a few truly interesting options at the lower end of the scale.  Set to launch in fall 2017, Springhouse’s new offering, “The Variety,” will be a hostel-inspired boutique hospitality experience designed to appeal to younger audiences by delivering a mix of culturally-relevant branding, stylish rooms, socially-activated lobby and communal spaces, and vibrant food and beverage programs.</p>
         <hr>
-        <p>Blend of 70% shared rooms and 30% private rooms</p>
+        <p>70 hotel rooms and 10,000 square feet of retail space</p>
         <hr>
-        <p>5,000 square foot courtyard</p>
-        <hr>
-        <p>F&amp;B to serve both hotel guests and Miami locals</p>
+        <p>5,000 square foot pool deck &amp; courtyard area</p>
         <hr>
         <p>Culturally relevant design and branding throughout</p>
         <hr>
@@ -71,7 +66,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Miami/facade-min.jpg">
-            <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric upscale hostel catering to a hip, youthful, and international clientele</p>
+            <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric boutique hospitality experience catering to a hip, youthful, and international clientele</p>
           </div>
         </div>
         <div class="row">
@@ -85,7 +80,7 @@
         <img src="img/Miami-Render.png">
         <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look</p>
         <img class="img-circle" src="img/Miami/circle-min.jpg">
-        <p class="case-textblock">A premier destination for younger travellers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix, and 24/7 entertainment</p>
+        <p class="case-textblock">A premier destination for younger travelers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix, and 24/7 entertainment</p>
       </div>
     </div>
   </div>
