--- a/williamsburg.html
+++ b/williamsburg.html
@@ -48,15 +48,13 @@
         <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
-        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences. The property features a prime location in a vibrant neighborhood, close proximity
-          to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan. Moreover, many of the units can easy be converted into shared apartments, making them especially attractive
-          to the young tenants.</p>
+        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing prosperity of East Williamsburg and its younger, “creative” class audience. The property features a prime location in a vibrant neighborhood, close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan. Moreover, many of the units can be easily converted into shared apartments, making them especially attractive to the young tenants.</p>
         <hr>
         <p>32 loft-style apartments</p>
         <hr>
-        <p>4-story building</p>
-        <hr>
         <p>3,000 square foot roof deck</p>
+        <hr>
+        <p>2,500 square foot gym and entertainment space</p>
         <hr>
         <div class="sp-maps wb-map">
           <img class="img-circle roundmap" src="img/Map_Williamsburg.jpg">
@@ -66,13 +64,13 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/facade-min.jpg">
-            <p class="extra-lower">An striking new build delivering 32 stylish, loft-style condominium units to the vibrant East Williamsburg market.</p>
+            <p class="extra-lower">A striking new build delivering 32 stylish, loft-style condominium units to the vibrant East Williamsburg market.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/A-min.jpg" alt="">
-            <p>A range of amenities – including a game room, full gym, and bike storage – are designed to support younger residents’ lifestyle and tastes.</p>
+            <p>A range of amenities – including a game room, full gym, and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
         </div>
       </div>
