--- a/about.html
+++ b/about.html
@@ -59,11 +59,11 @@
           </div>
           <div class="col-sm-6 remove-right">
             <p>Our flexibility and nimbleness at all stages of the investment and development process is an advantage in any economic cycle.  We are a hands on manager with capabilities in investment, finance, construction, property management and design.</p>
-            <hr>
+            <hr class="about-hr">
             <p class="quote text-xs-center">Entrepreneurial Spirit
               <br>+
               <br>Institutional Execution</p>
-            <hr>
+            <hr class="about-hr">
             <p>We target relationship driven situations with strong long term growth potential.  Our goal is to create significant value for each project and neighborhood we work in.</p>
           </div>
         </div>
