--- a/contact.html
+++ b/contact.html
@@ -52,16 +52,18 @@
         <a href="tel:+12125966960">
           <p>T: 212 596 6960</p>
         </a>
+        <br>
         <p class="email-label">Maintenance and leasing inquiries:</p>
         <a href="mailto:maintenance@springhousepartners.com">
           <p><u>maintenance@springhousepartners.com</u></p>
         </a>
+        <br>
         <p class="email-label">General business inquiries:</p>
         <a href="mailto:info@springhousepartners.com">
           <p><u>info@springhousepartners.com</u></p>
         </a>
       </div>
-      <div class="col-sm-9">
+      <div class="offset-sm-1 col-sm-7">
         <div id="map"></div>
       </div>
     </div>
