--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
       </div>
     </div>
     <div class="row home-text">
+      <hr class="subtitle-hr home-hr-fix">
       <div class="col-sm-6">
-        <hr class="subtitle-hr">
         <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
           development.
         </p>
       </div>
       <div class="col-sm-6">
-        <hr class="subtitle-hr">
         <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout
           New York City and South Florida.</p>
       </div>
