--- a/bedstuy.html
+++ b/bedstuy.html
@@ -48,7 +48,7 @@
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
-        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School, The Culinary Institute and other institutions.</p>
+        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School, The Culinary Institute and other institutions.</p>
         <hr>
         <p>64,000 square feet</p>
         <hr>
