--- a/press.html
+++ b/press.html
@@ -50,9 +50,8 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Springhouse pays $55,000,000 for Union Square gem</h1>
         <hr>
-        <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property.
-          <br>The six-story, 50,000-square-foot building at 51 Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property also has a roughly 10,000-square-foot commercial component holding five
-          retail tenants and one oﬃce unit.</p>
+        <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property. The six-story, 50,000-square-foot building at 51
+          Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
@@ -63,9 +62,8 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Uptown Maintains Upside</h1>
         <hr>
-        <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early.
-          <br>Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was Treetop Development, a New Jersey investment
-          company that bought them for $8.8 million in 2012.</p>
+        <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early. Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment
+          buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
@@ -76,10 +74,8 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Springhouse pays $18,200,000 for Brooklyn apt building</h1>
         <hr>
-        <p>Springhouse Partners has teamed up with Avenue Realty Capital in the $18.2 million oﬀ-market purchase of 902-908 Bedford Avenue, The Commercial Observer has learned.
-          <br>The 65,000-square-foot building is located in the Clinton Hill neighborhood of Brooklyn, just a few blocks from the Pratt Institute.
-          <br>“This area has seen signifcant positive changes over the past few years and we expect it to continue to gentrify,” said Adam Verner, president of Springhouse Partners, noting that $280 per square foot was a relative bargain compared to similar
-          properties in the neighborhood.</p>
+        <p>Springhouse Partners has teamed up with Avenue Realty Capital in the $18.2 million oﬀ-market purchase of 902-908 Bedford Avenue, The Commercial Observer has learned. The 65,000-square-foot building is located in the Clinton Hill neighborhood of
+          Brooklyn, just a few blocks from the Pratt Institute. “This area has seen significant positive changes...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
@@ -90,10 +86,7 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Young guns set their sights on becoming tomorrow’s real estate success stories</h1>
         <hr>
-        <p>The city’s young real estate entrepreneurs are using unique investment strategies to become tomorrow’s success stories.
-          <br>In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them.
-          <br>“Because I’m young, I tend to be a little bit more selective with the properties we invest in,” said 32-year-old Adam Verner, who founded Springhouse Partners in 2010. “It’s very important to me to make prudent investment decisions to be sure
-          that these frst few deals are successful.”</p>
+        <p>The city’s young real estate entrepreneurs are using unique investment strategies to become tomorrow’s success stories. In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them. “Because I’m young, I tend to be...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
@@ -106,9 +99,7 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
         <hr>
-        <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000.
-          <br>Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer, a private investor. “With newly renovated units delivered upon closing the buyer was
-          able to capitalize on the scale of the property with an immediate increase in cash fow,” said Scot Hirschfeld, Vice President at Ariel Property Advisors.</p>
+        <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000. Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
@@ -119,7 +110,8 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Historic Mayflower Hotel on Alton Road to Become an, um, 'Boutique Hospitality Concept'</h1>
         <hr>
-        <p>The historic Mediterranean Revival building on Alton Road and 17th Street with the Vespa dealership on the corner, which was originally known as the Mayflower Hotel and is now called the Variety Building and has been a studio apartment building since the '90s, is being "lightly renovated" and converted "back to its roots," into a "boutique hospitality concept." Two developers...</p>
+        <p>The historic Mediterranean Revival building on Alton Road and 17th Street with the Vespa dealership on the corner, which was originally known as the Mayflower Hotel and is now called the Variety Building and has been a studio apartment building
+          since the '90s, is being "lightly renovated" and converted "back to its roots," into a "boutique hospitality concept." Two developers...</p>
         <a href="">
           <p><u>Read more ></u></p>
         </a>
