--- a/press.html
+++ b/press.html
@@ -44,7 +44,7 @@
 
   <div class="container-fluid" id="press">
     <div class="row r1">
-      <div class="col-sm-3">
+      <div class="col-sm-3 no-left">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyNYCLogo.png">
         <hr>
@@ -52,7 +52,7 @@
         <hr>
         <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property. The six-story, 50,000-square-foot building at 51
           Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property...</p>
-        <a href="">
+        <a href="TRDNY.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
@@ -64,7 +64,7 @@
         <hr>
         <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early. Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment
           buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was...</p>
-        <a href="">
+        <a href="WSJ.pdf" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
@@ -76,31 +76,31 @@
         <hr>
         <p>Springhouse Partners has teamed up with Avenue Realty Capital in the $18.2 million oﬀ-market purchase of 902-908 Bedford Avenue, The Commercial Observer has learned. The 65,000-square-foot building is located in the Clinton Hill neighborhood of
           Brooklyn, just a few blocks from the Pratt Institute. “This area has seen significant positive changes...</p>
-        <a href="">
+        <a href="TCO.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 no-right">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyLogo.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Young guns set their sights on becoming tomorrow’s real estate success stories</h1>
         <hr>
         <p>The city’s young real estate entrepreneurs are using unique investment strategies to become tomorrow’s success stories. In some circles, youth correlates with impatience and rash decisions, but these relative newcomers to the ferce and congested New York City market are identifying eﬀective strategies — and valuable assets — and sticking to them. “Because I’m young, I tend to be...</p>
-        <a href="">
+        <a href="REW.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 no-left">
         <hr>
         <img class="press-logo" src="img/ArielPropertyAdvisorsLogo.png">
         <hr>
         <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
         <hr>
         <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000. Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer...</p>
-        <a href="">
+        <a href="ARIEL.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
@@ -112,7 +112,7 @@
         <hr>
         <p>The historic Mediterranean Revival building on Alton Road and 17th Street with the Vespa dealership on the corner, which was originally known as the Mayflower Hotel and is now called the Variety Building and has been a studio apartment building
           since the '90s, is being "lightly renovated" and converted "back to its roots," into a "boutique hospitality concept." Two developers...</p>
-        <a href="">
+        <a href="CM.pdf" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
@@ -124,11 +124,11 @@
         <hr>
         <p>The area surrounding West Avenue, 17th Street and Alton Road on South Beach is quickly becoming a “go-to” destination for boutique hotels catering to the thousands of visitors who flock to Lincoln Road. A 116-room Residence Inn recently opened
           on 17th Street at the northern end of West Avenue and a restored five-story building built in 1922 that was once the second tallest high-rise...</p>
-        <a href="">
+        <a href="TRDSF.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 no-right">
         <hr>
         <img class="press-logo" src="img/SouthFloridaBusinessJournalLogo.png">
         <hr>
@@ -136,7 +136,7 @@
         <hr>
         <p>Goldwater Realty, a Miami Beach-based company managed by Zalman Fellig, sold the building at 1700 Alton Road to AC 1700 Alton Owner, which is managed by Springhouse Partners founder Adam Verner. Forte Capital Management was also part of the deal.
           The buyer obtained a $19.04 million mortgage from Ladder Capital Finance...</p>
-        <a href="">
+        <a href="SFBJ.pdf" target="_blank">
           <p><u>Read more ></u></p>
         </a>
       </div>
